Fixed code block text overflow when not rendered
On app startup and conversation switching the code blocks aren't rendered properly and caused text to overflow off of the main screen.

I've fixed the overflowing issue.

--- a/index.scss
+++ b/index.scss
@@ -68,6 +68,7 @@ body {
 
 .messages {
     overflow-y: auto;
+    overflow-x: hidden;
     padding: 10px;
     position: relative;
     max-height: 96dvh;
@@ -298,6 +299,8 @@ button {
         float: left;
         background-color: #234b4a;
         color: #f0f0f0;
+        overflow: hidden;
+        text-overflow: clip;
 
         .label {
             background-color: #364353;
@@ -693,7 +696,7 @@ $shadow-spread-radius: 0px;
     width: 25px;
     color: lightskyblue;
     height: 25px;
-    bottom: 17px;
+    bottom: 15px;
     right: 65px;
     position: absolute;
     z-index: 9000888;
